<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Sneyder Angulo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:layout_editor_absoluteY="81dp">

  <FrameLayout
      android:id="@+id/sortByTextViewContainer"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintHorizontal_weight="2"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintEnd_toStartOf="@+id/currencySpinner">

    <com.sneyder.cryptotracker.utils.CustomTextView
        android:id="@+id/sortByTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        tools:text="Market Cap"
        android:textSize="14sp"
        app:drawableStartCompat="@drawable/ic_filter"
        android:textColor="#fff" />

  </FrameLayout>

  <Spinner
      android:id="@+id/currencySpinner"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/sortByTextViewContainer"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintEnd_toStartOf="@+id/percentChangeSpinner" />

  <Spinner
      android:id="@+id/percentChangeSpinner"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@+id/currencySpinner"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintHorizontal_weight="1"
      app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>