<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Sneyder Angulo
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:focusable="true"
      android:focusableInTouchMode="true"
      tools:ignore="ScrollViewSize">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:elevation="4dp"
        tools:targetApi="lollipop">


      <android.support.v7.widget.Toolbar
          android:id="@+id/toolbar"
          android:layout_width="?attr/actionBarSize"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_height="?attr/actionBarSize" />

      <ImageView
          android:id="@+id/currencyIconImageView"
          android:layout_width="wrap_content"
          android:layout_height="?attr/actionBarSize"
          android:paddingTop="10dp"
          android:paddingBottom="10dp"
          android:paddingRight="10dp"
          android:adjustViewBounds="true"
          android:src="@mipmap/ic_launcher"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@id/toolbar"
          tools:ignore="ContentDescription,RtlHardcoded,RtlSymmetry" />

      <TextView
          android:id="@+id/titleTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:textSize="19sp"
          android:textColor="#fff"
          android:textStyle="bold"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toEndOf="@id/currencyIconImageView"
          tools:text="Bitcoin | BTC"/>

      <Spinner
          android:id="@+id/currencySpinner"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

      <TextView
          android:id="@+id/priceTextView"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:background="@color/background_row_blue"
          tools:text="$12000"
          android:paddingTop="12dp"
          android:paddingBottom="12dp"
          android:textColor="#000"
          android:textSize="20sp"
          android:textStyle="bold"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"/>

      <TextView
          android:id="@+id/percentChangeLast1HTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/TopTextAppearanceCurrencyDetails"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@id/priceTextView"
          app:layout_constraintHorizontal_chainStyle="spread"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/percentChangeLast24HTextView"
          tools:text="Change 1h:\n 5%"/>

      <TextView
          android:id="@+id/percentChangeLast24HTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/TopTextAppearanceCurrencyDetails"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@id/priceTextView"
          app:layout_constraintStart_toEndOf="@id/percentChangeLast1HTextView"
          app:layout_constraintEnd_toStartOf="@id/percentChangeLast7DTextView"
          tools:text="Change 24h:\n 15%"/>

      <TextView
          android:id="@+id/percentChangeLast7DTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          style="@style/TopTextAppearanceCurrencyDetails"
          android:gravity="center"
          app:layout_constraintTop_toBottomOf="@id/priceTextView"
          app:layout_constraintStart_toEndOf="@id/percentChangeLast24HTextView"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="Change 7d:\n25%"/>

      <TextView
          android:id="@+id/marketCapLabel"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/percentChangeLast7DTextView"
          style="@style/TextAppearanceCurrencyDetails"
          android:background="@color/background_row_blue"
          android:textSize="17sp"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/currency_details_market_cap"/>


      <TextView
          android:id="@+id/marketCapTextView"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/percentChangeLast7DTextView"
          android:gravity="end"
          style="@style/TextAppearanceCurrencyDetails"
          android:background="@color/background_row_blue"
          android:textSize="17sp"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="$165355936914 USD"/>

      <TextView
          android:id="@+id/volumeLast24HLabel"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/marketCapTextView"
          style="@style/TextAppearanceCurrencyDetails"
          android:textSize="17sp"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/currency_details_volume"/>

      <TextView
          android:id="@+id/volumeLast24HTextView"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          android:gravity="end"
          app:layout_constraintTop_toBottomOf="@id/marketCapTextView"
          style="@style/TextAppearanceCurrencyDetails"
          android:textSize="17sp"
          app:layout_constraintEnd_toEndOf="parent"
          tools:text="$25355936914 USD"/>

      <TextView
          android:id="@+id/circulatingSupplyLabel"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/volumeLast24HTextView"
          style="@style/TextAppearanceCurrencyDetails"
          android:background="@color/background_row_blue"
          android:textSize="17sp"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/currency_details_circulating_supply"/>

      <TextView
          android:id="@+id/circulatingSupplyTextView"
          android:layout_width="0dp"
          app:layout_constraintWidth_percent="0.5"
          android:layout_height="wrap_content"
          android:gravity="end"
          app:layout_constraintTop_toBottomOf="@id/volumeLast24HTextView"
          style="@style/TextAppearanceCurrencyDetails"
          android:background="@color/background_row_blue"
          app:layout_constraintEnd_toEndOf="parent"
          android:textSize="17sp"
          tools:text="16,928,912 BTC"/>

      <TextView
          android:id="@+id/maxSupplyLabel"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/circulatingSupplyTextView"
          style="@style/TextAppearanceCurrencyDetails"
          android:textSize="17sp"
          app:layout_constraintStart_toStartOf="parent"
          android:text="@string/currency_details_max_supply"/>

      <TextView
          android:id="@+id/maxSupplyTextView"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:layout_constraintTop_toBottomOf="@id/circulatingSupplyTextView"
          app:layout_constraintEnd_toEndOf="parent"
          style="@style/TextAppearanceCurrencyDetails"
          android:textSize="17sp"
          tools:text="21,000,000 BTC"/>

      <android.support.v7.widget.CardView
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_margin="8dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintTop_toBottomOf="@id/maxSupplyTextView">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

          <TextView
              android:id="@+id/priceAlertsTextView"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/currency_details_price_alerts"
              android:layout_margin="8dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:textSize="17sp"
              android:textColor="#545454"/>

          <TextView
              android:id="@+id/currencyLabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:text="BTC/USD"
              android:textSize="17sp"
              android:textColor="#545454"
              android:layout_marginTop="8dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintStart_toEndOf="@id/priceAlertsTextView"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_marginRight="8dp"
              android:layout_marginEnd="8dp"
              app:layout_constraintHorizontal_bias="1.0" />


          <Switch
              android:id="@+id/priceAboveSwitch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="8dp"
              android:checked="false"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/priceAlertsTextView"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/currency_details_price_above"
              android:textSize="17sp"
              android:textColor="#545454"
              app:layout_constraintBaseline_toBaselineOf="@id/priceAboveSwitch"
              app:layout_constraintStart_toEndOf="@id/priceAboveSwitch"/>

          <EditText
              android:id="@+id/priceAboveEditText"
              android:layout_width="0dp"
              app:layout_constraintWidth_percent="0.4"
              android:layout_height="wrap_content"
              tools:text="$8200"
              android:inputType="numberDecimal"
              android:enabled="false"
              android:gravity="end"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBaseline_toBaselineOf="@id/priceAboveSwitch"
              tools:ignore="LabelFor" />

          <Switch
              android:id="@+id/priceBelowSwitch"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_margin="8dp"
              android:checked="false"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@id/priceAboveSwitch"/>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/currency_details_price_below"
              android:textSize="17sp"
              android:textColor="#545454"
              app:layout_constraintBaseline_toBaselineOf="@id/priceBelowSwitch"
              app:layout_constraintStart_toEndOf="@id/priceAboveSwitch"/>

          <EditText
              android:id="@+id/priceBelowEditText"
              android:layout_width="0dp"
              app:layout_constraintWidth_percent="0.4"
              android:layout_height="wrap_content"
              android:inputType="numberDecimal"
              tools:text="$7200"
              android:enabled="false"
              android:gravity="end"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintBaseline_toBaselineOf="@id/priceBelowSwitch"
              tools:ignore="LabelFor" />

        </android.support.constraint.ConstraintLayout>


      </android.support.v7.widget.CardView>


    </android.support.constraint.ConstraintLayout>

  </LinearLayout>

</ScrollView>