...
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">Crypto Tracker</string>
  <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
  <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
  <string name="percentage_change_last_1h_format">Change 1h:\n %s%%</string>
  <string name="percentage_change_last_24h_format">Change 24h:\n %s%%</string>
  <string name="percentage_change_last_7d_format">Change 7d:\n %s%%</string>

  <string name="currencies_name_format">%1$s (%2$s)</string>
...
  <string name="menu_rate">Rate</string>
  <string name="menu_send_feedback">Send feedback</string>
  <string name="menu_settings">Settings</string>
  <string name="main_sort_by">Sort by</string>
  <string name="menu_global_data">Global data</string>
  <string-array name="main_sort_by">
    <item>Market Cap(DESC)</item>
    <item>Name(DESC)</item>
    <item>Price(DESC)</item>
    <item>Change(DESC)</item>
    <item>Volume 24H(DESC)</item>
    <item>Market Cap(ASC)</item>
    <item>Name(ASC)</item>
...
